Fixed a few layout issues; modified scroll script to only check when needed

--- a/core.css
+++ b/core.css
@@ -32,7 +32,6 @@ blockquote {
     margin-bottom: 2em;
     background: linear-gradient(90deg, #1a3a7a, #24549e);
     box-shadow: 0 0 15px #555;
-    border-top: 1px solid #113;
     position: fixed;
     width: 100%;
     top: 0;
@@ -40,7 +39,7 @@ blockquote {
 }
 #header .wrapper h3 { 
     display: inline-block;
-    font-size: 3em;
+    font-size: 2em;
     text-shadow: 0px 0px 10px #ccc;
     line-height: 3em;
     padding: 2em 0 0 .5em;
@@ -75,7 +74,7 @@ blockquote {
 #header.small .wrapper ul { margin-top: 1em; }
 #header.small .wrapper ul li { margin-right: .5em; }
 
-#content { min-height: 20em; padding-top: 5em; }
+#content { min-height: 20em; padding-top: 13em; }
 #content .leftCol { padding: 0 2em; width: 65%; float: left; }
 #content .rightCol { width: 26%; float: right; margin: 0 2em 0 0; }
 
@@ -116,10 +115,6 @@ p.center img { cursor: pointer; }
     .wrapper { 
         max-width: 1350px; 
     }
-    #header { height: 10em; }
-    #header .wrapper h3 { font-size: 2em; }
-    #header .wrapper ul { margin-top: 1em; }
-    #content { padding-top: 13em; }
 }
 
 @media (max-width: 1024px) {
